--- a/glossary.html
+++ b/glossary.html
@@ -1478,5 +1478,6 @@
           });
         });
     </script>
+<script src="//code.tidio.co/fwaiq04tex0a0lvxrsfzowxzs2f0qplu.js" async></script>
   </body>
 </html>
