--- a/quizzes.html
+++ b/quizzes.html
@@ -95,5 +95,6 @@
     </div>
 
     <script src="quizzesScript.js"></script>
+<script src="//code.tidio.co/fwaiq04tex0a0lvxrsfzowxzs2f0qplu.js" async></script>
   </body>
 </html>
