--- a/resource.html
+++ b/resource.html
@@ -202,5 +202,6 @@
     </script>
 
     <!-- Reuse footer from previous pages -->
+<script src="//code.tidio.co/fwaiq04tex0a0lvxrsfzowxzs2f0qplu.js" async></script>
 </body>
 </html>
