--- a/about.html
+++ b/about.html
@@ -147,5 +147,6 @@
             observer.observe(card);
         });
     </script>
+<script src="//code.tidio.co/fwaiq04tex0a0lvxrsfzowxzs2f0qplu.js" async></script>
 </body>
 </html>
