--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
             <div class="footer-section">
                 <h4>التواصل</h4>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/%D8%B2%D9%8A%D8%A7%D8%AF-%D9%81%D9%84%D8%A7%D8%AD-%D9%85%D8%AD%D9%85%D8%AF511?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.instagram.com/zeadll" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/share/1EAJxyPiKs/" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://t.me/oham3" target="_blank"><i class="fab fa-telegram"></i></a>
